examples/errors/global_assertmsg_fail.tm
namespace Main003;

int32 main() {
    assertMsg(false, "expected positive value");
    ret 0;
}
